<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popculturequiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <!-- Start of the quiz -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/intro"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- First Question-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bad" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Who directed the song 'Bad'?"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_size"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/michaeljackson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="Michael Jackson"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <CheckBox
            android:id="@+id/martinscorsese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="Martin Scorsese"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <CheckBox
            android:id="@+id/alsharpton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="Al Sharpton"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <!-- Second Question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/firstquestion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_size"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/firstquestionchoice1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/answer_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/firstquestionchoice2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/answer_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/firstquestionchoice3"
                android:textColor="@android:color/white"
                android:textSize="@dimen/answer_size"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Third Question -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/earthsong" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namethesong"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:inputType="textCapWords"
            android:shadowColor="@android:color/white"
            android:textColor="@android:color/white" />

        <!-- Fourth Question-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/secondquestion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_size"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yesllama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="Yes"
                android:textColor="@android:color/white"
                android:textSize="@dimen/answer_size"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/nollama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="No"
                android:textColor="@android:color/white"
                android:textSize="@dimen/answer_size"
                android:textStyle="bold" />
        </RadioGroup>

        <!-- Fifth Question-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/thewayyoumakemefeel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What songs sampled Michael Jackson's 'The Way You Make Me Feel'?"
            android:textColor="@android:color/white"
            android:textSize="@dimen/question_size"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/rihanna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="Nobody's Business by Rihanna"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <CheckBox
            android:id="@+id/kanye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="Famous by Kanye West"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <CheckBox
            android:id="@+id/lilwayne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:text="You Song by Lil Wayne"
            android:textColor="@android:color/white"
            android:textSize="@dimen/answer_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="60dp"
            android:height="25dp"
            android:onClick="determineWinner"
            android:text="Submit!"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</ScrollView>
